--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
         <div class="image-container">
             <div class="image-box">
                 <a href="https://infinityrichglobal.github.io/Card/" class="image-link" target="_blank">
-                    <img src="https://cdn-icons-png.flaticon.com/128/6518/6518509.png" alt="Clickable Image">
+                    <img src="https://cdn-icons-png.flaticon.com/128/11103/11103359.png" alt="Clickable Image">
                 </a>
                 <div class="button-container">
-                    <button>ปุ่มใต้ภาพ 1</button>
+                    <button>Ai V8</button>
                 </div>
             </div>
             <div class="full-divider"></div>
