--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            font-size: 16px; /* เพิ่มบรรทัดนี้เพื่อกำหนดขนาดตัวอักษร */
         }
 
         .button-container button:hover {
