--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-  
             margin-top: 1rem;
         }
 
@@ -129,12 +128,12 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            font-size: 16px; /* เพิ่มบรรทัดนี้เพื่อกำหนดขนาดตัวอักษร */
+            font-size: 18px; /* เพิ่มบรรทัดนี้เพื่อกำหนดขนาดตัวอักษร */
         }
 
         .button-container button:hover {
-         transform: scale(2.2);
-            background-color: red;
+         transform: scale(1.1);
+          background-color: red;
         }
         
                 .user-info {
@@ -154,6 +153,10 @@
             font-weight: 500;
         }
 
+                .user-info img:hover {
+            transform: scale(1.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
 
     </style>
 </head>
