--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <div class="grid-item">
                 <img src="https://cdn-icons-gif.flaticon.com/14984/14984806.gif" alt="Clickable Image" class="image-link">
                 <div class="button-container">
-                    <button>ส่งการ์ดแนะนำตัว</button>
+                    <button onclick="window.location.href='https://infinityrichglobal.github.io/Card/profiles.html'">ส่งการ์ดแนะนำตัว</button>
                 </div>
             </div>
         </div>
